fix editor layout bug

--- a/www3/css/style.styl
+++ b/www3/css/style.styl
@@ -228,9 +228,9 @@ a
         background #fff
         top 80px
         width 100%
-        height: unquote('-webkit-calc(100% - 70px)');
-        height: unquote('-moz-calc(100% - 70px)');
-        height: unquote('-ms-calc(100% - 70px)');
-        height: unquote('calc(100% - 70px)');
+        height: unquote('-webkit-calc(100% - 80px)');
+        height: unquote('-moz-calc(100% - 80px)');
+        height: unquote('-ms-calc(100% - 80px)');
+        height: unquote('calc(100% - 80px)');
         border-top: 1px solid rgb(218, 218, 218);
         background:rgb(253, 253, 253);
